# Contributor-Tdd7GroupWork

./: .gitignore  README.md
.ai/: architecture.md  checks.md  docs_engine.md  instructions.md  mvp.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_requests.md
backend/: main.py  pyproject.toml
backend/app/: dependencies.py  main.py  schemas.py
backend/app/core/: database.py  models.py
backend/app/routers/: __init__.py  dashboard.py  docs.py  logs.py  users.py
backend/app/services/: doc_engine.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
