[project]
name = "sassydoc"
version = "0.1.0"
description = "FastAPI backend optimized for local deterministic document indexing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "sqlalchemy>=2.0.30"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]
